Mark release as pre-release to not show up on the sidebar in Github

--- a/.github/workflows/release-source-snapshot.yml
+++ b/.github/workflows/release-source-snapshot.yml
@@ -85,6 +85,7 @@ jobs:
         with:
           name: source-snapshot
           draft: false
+          prerelease: true
           tag_name: source-snapshot
           fail_on_unmatched_files: true
           files: |
