matix can never be '' but []

--- a/.github/workflows/re-build-source-snapshot.yml
+++ b/.github/workflows/re-build-source-snapshot.yml
@@ -40,7 +40,7 @@ jobs:
     needs: find
     name: delete source-snapshots of today
     runs-on: ubuntu-latest
-    if: needs.find.outputs.matrix != ''
+    if: needs.find.outputs.matrix != []
     strategy:
       matrix:
         cfg:
