--- a/.github/workflows/re-build-source-snapshot.yml
+++ b/.github/workflows/re-build-source-snapshot.yml
@@ -28,17 +28,18 @@ jobs:
             -sL https://api.github.com/repos/${{ github.repository }}/releases/tags/source-snapshot \
           | jq '.assets' > assets.json
 
-          # Get all assets of today
-          jq 'map(select((.created_at | fromdate | strftime("%Y%m%d")) == (now | strftime("%Y%m%d"))))' < assets.json > remove_assets.json
-          
-          echo "about to remove these assets:"
-          jq '.[].name' -r  < remove_assets.json
+          pairs='[]'
+          if [ -s assets.json ]; then
+            # Get all assets of today
+            jq 'map(select((.created_at | fromdate | strftime("%Y%m%d")) == (now | strftime("%Y%m%d"))))' < assets.json > remove_assets.json
+            
+            if [ -s remove_assets.json ]; then
+              echo "about to remove these assets:"
+              jq '.[].name' -r  < remove_assets.json
 
-          pairs=`jq '[.[] | {name:.name, id:.id} ]' -rc < remove_assets.json`
-          if [ "$pairs" == "" ]; then
-            pairs='[]'
+              pairs=`jq '[.[] | {name:.name, id:.id} ]' -rc < remove_assets.json`
+            fi
           fi
-
           echo "::set-output name=name_id_pairs::$pairs"
   
   delete:
