--- a/.github/workflows/re-build-source-snapshot.yml
+++ b/.github/workflows/re-build-source-snapshot.yml
@@ -100,32 +100,16 @@ jobs:
           fetch-depth: 0
           submodules: true
       
-      ### TODO(kwk): This fiddleing with remotes and pushing back to the
-      ### repository needs to go away if we want this upstream.
-
       - name: setup upstream remote
         run: git remote add upstream https://github.com/llvm/llvm-project.git
       
       - name: fetch from upstream remote
         run: git fetch upstream
-      
-      - name: rebase onto upstream/main
-        run: |
-          git config user.email "snapshot-bot@example.com"
-          git config user.name "snapshot bot"
-          git rebase upstream/main
-      
-      - name: push back origin/snapshot
-        run: git push -f origin HEAD:snapshot
-
-      ### END TODO
 
       - name: create source-snapshot tarballs
         run: |
-          cd llvm/utils/release
-          ./export.sh -snapshot
-          
-
+          llvm/utils/release/export.sh --snapshot upstream/main
+      
       - name: upload today's source snapshots and version file
         uses: softprops/action-gh-release@v1
         with:
@@ -134,10 +118,11 @@ jobs:
           prerelease: true
           tag_name: source-snapshot
           fail_on_unmatched_files: true
+          # TODO(kwk): Help wanted! If you know something better to match YYYYMMDD, please share it.
           files: |
-            llvm/utils/release/*.src.tar.xz
-            llvm/utils/release/llvm-version-*.txt
-            llvm/utils/release/llvm-version-rc-*.txt
-            llvm/utils/release/llvm-git-revision-*.txt
+            *-[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9].src.tar.xz
+            llvm-release-[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9].txt
+            llvm-rc-[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9].txt
+            llvm-git-revision-[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9].txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
