--- a/.github/workflows/re-build-source-snapshot.yml
+++ b/.github/workflows/re-build-source-snapshot.yml
@@ -28,7 +28,6 @@ jobs:
           echo "::group::Git config"
           git config -l
           echo "::endgroup::"
-          exit 1
           
 
           echo "::group::Find all source snapshot release assets"
@@ -101,6 +100,10 @@ jobs:
       - name: clone kwk/llvm-project repo without checkout
         run: git clone --no-tags --single-branch --branch=snapshot --depth=1 --filter=blob:none --sparse https://github.com/kwk/llvm-project.git .
       
+      - name: set some git config
+        run: |
+          git config --add gc.auto 0
+
       - name: minimal checkout of only the files we need
         run: |
           git sparse-checkout init
